fix on mobile

--- a/app/assets/styles/pages/_product.styl
+++ b/app/assets/styles/pages/_product.styl
@@ -386,6 +386,7 @@ h4
 
   .logo-container
     width 100%
+    margin-bottom remify(10px)
 
   .s-logo
     margin 0 auto
